[package]
authors = ["dignifiedquire <me@dignifiedquire.com>", "Mike Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "algorithms"]
description = "High performance implementation of BLS12 381"
documentation = "https://docs.rs/blstrs_plus"
edition = "2021"
homepage = "https://docs.rs/blstrs_plus"
license = "MIT/Apache-2.0"
name = "blstrs_plus"
readme = "README.md"
repository = "https://github.com/mikelodder7/blstrs"
version = "0.8.10"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
arrayref = "0.3"
blst = { version = "=0.3.11" }
elliptic-curve = { version = "0.13", features = ["hazmat"], default-features = false }
ff = "0.13"
group = { version = "0.13", features = ["tests"] }
pairing_lib = { version = "0.23", package = "pairing" }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
subtle = "2.4"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[dev-dependencies]
bls12_381_plus = "0.8"
rand_xorshift = "0.3"
serde_json = "1.0"
serde_bare = "0.5"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["hashing", "serde"]
hashing = ["elliptic-curve/hash2curve"]
portable = ["blst/portable"]
__private_bench = []
